--- a/src/main/resources/static/sweng/penelope/auth/package-tree.html
+++ b/src/main/resources/static/sweng/penelope/auth/package-tree.html
@@ -58,12 +58,11 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
-<li class="circle">sweng.penelope.auth.<a href="ApiKeyAuthenticationManager.html" class="type-name-link" title="class in sweng.penelope.auth">ApiKeyAuthenticationManager</a> (implements org.springframework.security.authentication.AuthenticationManager)</li>
 <li class="circle">org.springframework.web.filter.GenericFilterBean (implements org.springframework.beans.factory.BeanNameAware, org.springframework.beans.factory.DisposableBean, org.springframework.context.EnvironmentAware, org.springframework.core.env.EnvironmentCapable, javax.servlet.Filter, org.springframework.beans.factory.InitializingBean, org.springframework.web.context.ServletContextAware)
 <ul>
 <li class="circle">org.springframework.security.web.authentication.preauth.AbstractPreAuthenticatedProcessingFilter (implements org.springframework.context.ApplicationEventPublisherAware)
 <ul>
-<li class="circle">sweng.penelope.auth.<a href="ApiKeyFilter.html" class="type-name-link" title="class in sweng.penelope.auth">ApiKeyFilter</a></li>
+<li class="circle">sweng.penelope.auth.<a href="UserFilter.html" class="type-name-link" title="class in sweng.penelope.auth">UserFilter</a></li>
 </ul>
 </li>
 </ul>
@@ -87,6 +86,7 @@ loadScripts(document, 'script');</script>
 </li>
 </ul>
 </li>
+<li class="circle">sweng.penelope.auth.<a href="UserAuthenticationManager.html" class="type-name-link" title="class in sweng.penelope.auth">UserAuthenticationManager</a> (implements org.springframework.security.authentication.AuthenticationManager)</li>
 </ul>
 </li>
 </ul>
