--- a/src/main/resources/static/sweng/penelope/controllers/package-tree.html
+++ b/src/main/resources/static/sweng/penelope/controllers/package-tree.html
@@ -58,13 +58,14 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
-<li class="circle">sweng.penelope.controllers.<a href="ApiKeyController.html" class="type-name-link" title="class in sweng.penelope.controllers">ApiKeyController</a></li>
 <li class="circle">sweng.penelope.controllers.<a href="BirdController.html" class="type-name-link" title="class in sweng.penelope.controllers">BirdController</a></li>
 <li class="circle">sweng.penelope.controllers.<a href="CacheUtils.html" class="type-name-link" title="class in sweng.penelope.controllers">CacheUtils</a></li>
 <li class="circle">sweng.penelope.controllers.<a href="CampusController.html" class="type-name-link" title="class in sweng.penelope.controllers">CampusController</a></li>
 <li class="circle">sweng.penelope.controllers.<a href="ControllerUtils.html" class="type-name-link" title="class in sweng.penelope.controllers">ControllerUtils</a></li>
+<li class="circle">sweng.penelope.controllers.<a href="DataManagerController.html" class="type-name-link" title="class in sweng.penelope.controllers">DataManagerController</a></li>
 <li class="circle">sweng.penelope.controllers.<a href="FileDownloadController.html" class="type-name-link" title="class in sweng.penelope.controllers">FileDownloadController</a></li>
 <li class="circle">sweng.penelope.controllers.<a href="FileUploadController.html" class="type-name-link" title="class in sweng.penelope.controllers">FileUploadController</a></li>
+<li class="circle">sweng.penelope.controllers.<a href="KeyPairController.html" class="type-name-link" title="class in sweng.penelope.controllers">KeyPairController</a></li>
 </ul>
 </li>
 </ul>
