--- a/src/main/resources/static/sweng/penelope/entities/package-tree.html
+++ b/src/main/resources/static/sweng/penelope/entities/package-tree.html
@@ -58,9 +58,9 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
-<li class="circle">sweng.penelope.entities.<a href="ApiKey.html" class="type-name-link" title="class in sweng.penelope.entities">ApiKey</a></li>
 <li class="circle">sweng.penelope.entities.<a href="Bird.html" class="type-name-link" title="class in sweng.penelope.entities">Bird</a></li>
 <li class="circle">sweng.penelope.entities.<a href="Campus.html" class="type-name-link" title="class in sweng.penelope.entities">Campus</a></li>
+<li class="circle">sweng.penelope.entities.<a href="DataManager.html" class="type-name-link" title="class in sweng.penelope.entities">DataManager</a></li>
 </ul>
 </li>
 </ul>
