--- a/src/main/resources/static/sweng/penelope/repositories/package-tree.html
+++ b/src/main/resources/static/sweng/penelope/repositories/package-tree.html
@@ -60,9 +60,9 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">org.springframework.data.repository.CrudRepository&lt;T,<wbr>ID&gt;
 <ul>
-<li class="circle">sweng.penelope.repositories.<a href="ApiKeyRepository.html" class="type-name-link" title="interface in sweng.penelope.repositories">ApiKeyRepository</a></li>
 <li class="circle">sweng.penelope.repositories.<a href="BirdRepository.html" class="type-name-link" title="interface in sweng.penelope.repositories">BirdRepository</a></li>
 <li class="circle">sweng.penelope.repositories.<a href="CampusRepository.html" class="type-name-link" title="interface in sweng.penelope.repositories">CampusRepository</a></li>
+<li class="circle">sweng.penelope.repositories.<a href="DataManagerRepository.html" class="type-name-link" title="interface in sweng.penelope.repositories">DataManagerRepository</a></li>
 </ul>
 </li>
 </ul>
